--- a/tex/1.bib
+++ b/tex/1.bib
@@ -7,6 +7,121 @@
   publisher={Erlbaum Mahwah, NJ}
 }
 
+@UNPUBLISHED {nist2007,
+    author = "NIST",
+    title  = "The ace 2007 (ace07) evaluation plan: Evalu- ation of the detection and recognition of ace entities, values, temporal expressions, relations, and events",
+    note   = "The ace 2007 (ace07) evaluation plan: Evalu- ation of the detection and recognition of ace entities, values, temporal expressions, relations, and events",
+    year   = "2007"
+}
+
+@article{palmer2005proposition,
+  title={The proposition bank: An annotated corpus of semantic roles},
+  author={Palmer, Martha and Gildea, Daniel and Kingsbury, Paul},
+  journal={Computational linguistics},
+  volume={31},
+  number={1},
+  pages={71--106},
+  year={2005},
+  publisher={MIT Press}
+}
+
+@inproceedings{miltsakaki2004penn,
+  title={The Penn Discourse Treebank.},
+  author={Miltsakaki, Eleni and Prasad, Rashmi and Joshi, Aravind K and Webber, Bonnie L},
+  booktitle={LREC},
+  year={2004}
+}
+
+@inproceedings{pustejovsky2003timebank,
+  title={The timebank corpus},
+  author={Pustejovsky, James and Hanks, Patrick and Sauri, Roser and See, Andrew and Gaizauskas, Robert and Setzer, Andrea and Radev, Dragomir and Sundheim, Beth and Day, David and Ferro, Lisa and others},
+  booktitle={Corpus linguistics},
+  volume={2003},
+  pages={40},
+  year={2003},
+  organization={Lancaster, UK.}
+}
+
+@inproceedings{tjong2003introduction,
+  title={Introduction to the CoNLL-2003 shared task: Language-independent named entity recognition},
+  author={Tjong Kim Sang, Erik F and De Meulder, Fien},
+  booktitle={Proceedings of the seventh conference on Natural language learning at HLT-NAACL 2003-Volume 4},
+  pages={142--147},
+  year={2003},
+  organization={Association for Computational Linguistics}
+}
+
+@inproceedings{TjongKimSang:2002:ICS:1118853.1118877,
+ author = {Tjong Kim Sang, Erik F.},
+ title = {Introduction to the CoNLL-2002 Shared Task: Language-independent Named Entity Recognition},
+ booktitle = {Proceedings of the 6th Conference on Natural Language Learning - Volume 20},
+ series = {COLING-02},
+ year = {2002},
+ pages = {1--4},
+ numpages = {4},
+ url = {https://doi.org/10.3115/1118853.1118877},
+ doi = {10.3115/1118853.1118877},
+ acmid = {1118877},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+}
+
+@inproceedings{Palmer:2001:ETA:2387364.2387369,
+ author = {Palmer, Martha and Fellbaum, Christiane and Cotton, Scott and Delfs, Lauren and Dang, Hoa Trang},
+ title = {English Tasks: All-words and Verb Lexical Sample},
+ booktitle = {The Proceedings of the Second International Workshop on Evaluating Word Sense Disambiguation Systems},
+ series = {SENSEVAL '01},
+ year = {2001},
+ location = {Toulouse, France},
+ pages = {21--24},
+ numpages = {4},
+ url = {http://dl.acm.org/citation.cfm?id=2387364.2387369},
+ acmid = {2387369},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+}
+
+
+@article{sang2001introduction,
+  title={Introduction to the CoNLL-2001 shared task: Clause identification},
+  author={Sang, Erik F and D{\'e}jean, Herv{\'e}},
+  journal={arXiv preprint cs/0107016},
+  year={2001}
+}
+
+@article{carlson2001discourse,
+  title={Discourse tagging reference manual},
+  author={Carlson, Lynn and Marcu, Daniel},
+  journal={ISI Technical Report ISI-TR-545},
+  volume={54},
+  pages={56},
+  year={2001}
+}
+
+@book{manning1999foundations,
+  title={Foundations of statistical natural language processing},
+  author={Manning, Christopher D and Manning, Christopher D and Sch{\"u}tze, Hinrich},
+  year={1999},
+  publisher={MIT press}
+}
+
+@incollection{hajic:1998,
+    author = {Haji\v{c}, Jan},
+    booktitle = {{Issues of Valency and Meaning. Studies in Honor of Jarmila Panevov\'{a}}},
+    citeulike-article-id = {4039141},
+    citeulike-linkout-0 = {http://ufal.mff.cuni.cz/pdt/Corpora/PDT\_1.0/References/pdtiovam.pdf},
+    editor = {Haji\v{c}ov\'{a}, Eva},
+    keywords = {pdt},
+    pages = {12--19},
+    posted-at = {2009-02-12 14:42:11},
+    priority = {5},
+    publisher = {Prague Karolinum, Charles University Press},
+    title = {{Building a Syntactically Annotated Corpus: The Prague Dependency Treebank}},
+    url = {http://ufal.mff.cuni.cz/pdt/Corpora/PDT\_1.0/References/pdtiovam.pdf},
+    year = {1998}
+}
+
+
 @book{reeves1996media,
   title={The media equation: How people treat computers, television, and new media like real people and places.},
   author={Reeves, Byron and Nass, Clifford Ivar},
@@ -21,6 +136,46 @@
   year={1994}
 }
 
+@article{marcus1993building,
+  title={Building a large annotated corpus of English: The Penn Treebank},
+  author={Marcus, Mitchell P and Marcinkiewicz, Mary Ann and Santorini, Beatrice},
+  journal={Computational linguistics},
+  volume={19},
+  number={2},
+  pages={313--330},
+  year={1993},
+  publisher={MIT Press}
+}
+
+@article{10000030796,
+author="SIDNER, C.",
+title="Focusing in the Comprehension of Definite Anaphora",
+journal="Computational Models of Discourse",
+ISSN="",
+publisher="MIT Press",
+year="1983",
+month="",
+volume="",
+number="",
+pages="267-330",
+URL="https://ci.nii.ac.jp/naid/10000030796/en/",
+DOI="",
+}
+
+@article{wilensky1983planning,
+  title={Planning and understanding: A computational approach to human reasoning},
+  author={Wilensky, Robert},
+  year={1983},
+  publisher={Addison-Wesley Pub. Co., Reading, MA}
+}
+
+@article{francis1982frequency,
+  title={Frequency analysis of English usage},
+  author={Francis, WN and Kucera, Henry},
+  year={1982},
+  publisher={Houghton Mifflin Company}
+}
+
 @article{bresnan1982introduction,
   title={Introduction: Grammars as mental representations of language},
   author={Bresnan, Joan and Kaplan, Ronald M and others},
@@ -28,6 +183,45 @@
   pages={xvii--lii},
   year={1982},
   publisher={Mit Press Cambridge (Mass.)}
+}
+
+@inproceedings{kaplan1981phonological,
+  title={Phonological rules and finite-state transducers},
+  author={Kaplan, Ronald M and Kay, Martin},
+  booktitle={Linguistic Society of America Meeting Handbook, Fifty-Sixth Annual Meeting},
+  pages={27--30},
+  year={1981}
+}
+
+@article{carbonell1981inside,
+  title={Inside computer understanding: Five programs plus miniatures},
+  author={Carbonell, JG and Schank, RC and Riesbeck, CK},
+  year={1981}
+}
+
+@book{riesbeck1981inside,
+  title={Inside computer understanding: Five programs plus miniatures},
+  author={Riesbeck, Christopher K and Schank, Roger C},
+  year={1981},
+  publisher={L. Erlbaum Associates Inc.}
+}
+
+@article{church1980memory,
+  title={On memory limitations in natural language processing},
+  author={Church, Kenneth Ward},
+  year={1980},
+  publisher={Massachusetts Institute of Technology}
+}
+
+@article{perrault1980plan,
+  title={A plan-based analysis of indirect speech acts},
+  author={Perrault, C Raymond and Allen, James F},
+  journal={Computational Linguistics},
+  volume={6},
+  number={3-4},
+  pages={167--182},
+  year={1980},
+  publisher={MIT Press}
 }
 
 @article{searle1980minds,
@@ -52,11 +246,78 @@
   publisher={Elsevier}
 }
 
+@article{COHEN1979177,
+title = "Elements of a plan-based theory of speech acts",
+journal = "Cognitive Science",
+volume = "3",
+number = "3",
+pages = "177 - 212",
+year = "1979",
+issn = "0364-0213",
+doi = "https://doi.org/10.1016/S0364-0213(79)80006-3",
+url = "http://www.sciencedirect.com/science/article/pii/S0364021379800063",
+author = "Philip R. Cohen and C. Raymond Perrault"
+}
+
 @ARTICLE {kaym1979,
     author  = "Kay, M",
     title   = "Functional grammar",
     journal = "BLS-79",
     year    = "1979"
+}
+
+@incollection{francis1979,
+  added-at = {2009-10-23T10:49:34.000+0200},
+  address = {London and New York},
+  author = {Francis, W. Nelson},
+  biburl = {https://www.bibsonomy.org/bibtex/234b5988926c34d1123382770d17acadc/gerhard.wohlgenannt},
+  booktitle = {Studies in {E}nglish linguistics for Randolph Quirk},
+  description = {phd thesis version 2009-10-23},
+  editor = {Greenbaum, Sidney and Leech, Geoffrey and Svartvik, Jan},
+  interhash = {74228b3541d28bdcdc3c1ee42a1a4b89},
+  intrahash = {34b5988926c34d1123382770d17acadc},
+  keywords = {imported},
+  pages = {192--209},
+  publisher = {Longman},
+  timestamp = {2009-10-23T10:49:38.000+0200},
+  title = {A tagged corpus -- problems and prospects},
+  year = 1979
+}
+
+@article{hobbs-resolving-1987,
+  added-at = {2008-10-29T12:58:56.000+0100},
+  author = {Hobbs, J.R.},
+  biburl = {https://www.bibsonomy.org/bibtex/22eea688412b71a21556a22bbb2241d08/robo},
+  interhash = {111d0415d5fb82d853cd0d7421e18f73},
+  intrahash = {2eea688412b71a21556a22bbb2241d08},
+  journal = {Lingua 44},
+  keywords = {pronoun references resolving wismasys0809},
+  pages = {311-338},
+  timestamp = {2008-10-29T12:58:56.000+0100},
+  title = {Resolving pronoun references},
+  year = 1978
+}
+
+@techreport{grosz1977representation,
+  title={The representation and use of focus in dialogue understanding},
+  author={Grosz, Barbara J},
+  year={1977},
+  institution={SRI International Menlo Park United States}
+}
+
+@inproceedings{lehnert1977conceptual,
+  title={A conceptual theory of question answering},
+  author={Lehnert, Wendy G},
+  booktitle={Proceedings of the 5th international joint conference on Artificial intelligence-Volume 1},
+  pages={158--164},
+  year={1977},
+  organization={Morgan Kaufmann Publishers Inc.}
+}
+
+@article{schank1977,
+  title={Scripts, Plans, Goals and Understanding},
+  author={Schank, R. C. and Abelson, R. P},
+  year={1977}
 }
 
 @article{weizenbaum1976computer,
@@ -66,11 +327,72 @@
   publisher={WH Freeman \& Co}
 }
 
+@article{wilks1975preferential,
+  title={A preferential, pattern-seeking, semantics for natural language inference},
+  author={Wilks, Yorick},
+  journal={Artificial intelligence},
+  volume={6},
+  number={1},
+  pages={53--74},
+  year={1975},
+  publisher={Elsevier}
+}
+
+@INCOLLECTION {wilksy1975,
+    author    = "Wilks, Y",
+    title     = "Preference semantics",
+    booktitle = "The Formal Semantics of Natural Language",
+    publisher = "Cambdrige Univ. Press",
+    year      = "1975",
+    pages     = "329-350"
+}
+
+@BOOK {normand.arumerlhartd.e.1975,
+    author    = "Norman, D. A and Rumerlhart, D. E.",
+    title     = "Explorations in Cognition",
+    publisher = "Freeman, San Francisco, CA",
+    year      = "1975"
+}
+
 @article{colmerauer1975grammaires,
   title={Les grammaires de m{\'e}tamorphose GIA},
   author={Colmerauer, Alain},
   journal={Internal publica},
   year={1975}
+}
+
+@article{kintsch1974representation,
+  title={The representation of meaning in memory.},
+  author={Kintsch, Walter},
+  year={1974},
+  publisher={Lawrence Erlbaum}
+}
+
+@inproceedings{Woods:1973:PNL:1499586.1499695,
+ author = {Woods, W. A.},
+ title = {Progress in Natural Language Understanding: An Application to Lunar Geology},
+ booktitle = {Proceedings of the June 4-8, 1973, National Computer Conference and Exposition},
+ series = {AFIPS '73},
+ year = {1973},
+ location = {New York, New York},
+ pages = {441--450},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1499586.1499695},
+ doi = {10.1145/1499586.1499695},
+ acmid = {1499695},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@article{schank1972conceptual,
+  title={Conceptual dependency: A theory of natural language understanding},
+  author={Schank, Roger C},
+  journal={Cognitive psychology},
+  volume={3},
+  number={4},
+  pages={552--631},
+  year={1972},
+  publisher={Elsevier}
 }
 
 @article{winograd1972understanding,
@@ -98,6 +420,16 @@
   publisher={September}
 }
 
+@INCOLLECTION {quillianm.r1968,
+    author    = "Quillian, M. R",
+    title     = "Semantic memory",
+    booktitle = "Semantic Information Processing",
+    publisher = "MIT Press",
+    year      = "1968",
+    editor    = "In Minsky, M",
+    pages     = "227-270"
+}
+
 @article{fillmore1968lexical,
   title={Lexical entries for verbs},
   author={Fillmore, Charles J},
@@ -105,6 +437,20 @@
   pages={373--393},
   year={1968},
   publisher={JSTOR}
+}
+
+@inproceedings{Woods1967SemanticsFA,
+  title={Semantics For a Question-Answering System},
+  author={William A. Woods},
+  booktitle={Outstanding Dissertations in the Computer Sciences},
+  year={1967}
+}
+
+@book{kuvcera1967computational,
+  title={Computational analysis of present-day American English},
+  author={Ku{\v{c}}era, Henry and Francis, Winthrop Nelson},
+  year={1967},
+  publisher={Dartmouth Publishing Group}
 }
 
 @article{Weizenbaum:1966:ECP:365153.365168,
@@ -149,6 +495,20 @@
   volume={3},
   pages={299-314}
 }
+
+@misc{cogprints1148,
+          volume = {35},
+          number = {1},
+          author = {Noam Chomsky},
+            note = {This is one of the most influential articles in the history of  the cognitive sciences. http://cogsci.umn.edu/millennium/final.html},
+           title = {A Review of B. F. Skinner's Verbal Behavior},
+         journal = {Language},
+           pages = {26--58},
+            year = {1959},
+        keywords = {language, behaviorism, universal grammar, learning, Skinner, syntax, learnability, cognition},
+             url = {http://cogprints.org/1148/}
+}
+
 
 @inproceedings{bledsoe1959pattern,
   title={Pattern recognition and reading by machine},
