--- a/tex/1.tex
+++ b/tex/1.tex
@@ -235,7 +235,7 @@ Trường phái symbolic được phát triển từ hai hướng nghiên cứu.
 
 Trường phái stochastic được phát triển chính trong lĩnh vực thống kê và kỹ thuật điện. Cuối năm 1950, phương pháp Bayesian được áp dụng trong lĩnh vực nhận diện ký tự quang học. \citet{bledsoe1959pattern} xây dựng một hệ thống Bayesian cho nhận dạng văn bản sử dụng một từ điển lớn và tính likelihood của mỗi chuỗi ký tự quan sát được từ mỗi từ trong từ điển bằng cách nhân các likelihood của từng ký tự. \citet{mosteller1964inference} áp dụng các phương pháp Bayesian để giải quyết vấn đề về quyền tác giả của các báo cáo khoa học trong The Federalist.
 
-Những năm 1960 cho thấy sự phát triển của các mô hình tâm lý học kiểm chứng được đầu tiên của xử lý ngôn ngữ tự nhiên dựa vào ngữ pháp chuyển đổi, cũng như các kho ngữ liệu đầu tiên: tập dữ liệu Brown của tiếng Anh Mỹ, một triệu từ được thu thập từ 500 văn bản từ nhiều nguồn (báo chí, tiểu thuyết, giả tưởng, học thuật,...), được thu thập bởi đại học Brown vào năm 1963-64 (Kucera và Francis, 1967; Francis, 1979; Francis và Kucera, 1982), và một bộ từ điển tiếng địa phương Trung Quốc của William S. Y. Wang năm 1967.
+Những năm 1960 cho thấy sự phát triển của các mô hình tâm lý học kiểm chứng được đầu tiên của xử lý ngôn ngữ tự nhiên dựa vào ngữ pháp chuyển đổi, cũng như các kho ngữ liệu đầu tiên: tập dữ liệu Brown của tiếng Anh Mỹ, một triệu từ được thu thập từ 500 văn bản từ nhiều nguồn (báo chí, tiểu thuyết, giả tưởng, học thuật,...), được thu thập bởi đại học Brown vào năm 1963-64 (Kučera và Francis, \citeyear{kuvcera1967computational}; Francis, \citeyear{francis1979}; Francis và Kucera, \citeyear{francis1982frequency}), và một bộ từ điển tiếng địa phương Trung Quốc của William S. Y. Wang năm 1967.
 
 \subsection{Bốn mô hình: 1970-1983}
 
@@ -245,15 +245,15 @@ Mô hình \textbf{stochastic} đóng vai trò to lớn trong sự phát triển 
 
 Mô hình \textbf{hướng logic} được bắt đầu từ công trình của Colmerauer và đồng nghiệp trong Q-systems và metamorphosis grammars (Colmerauer, \citeyear{colmerauer1970systemes}, \citeyear{colmerauer1975grammaires}), tiền thân của Prolog và Define Clause Grammars \citep{pereira1980definite}. Một cách độc lập, các công trình của \citet{kaym1979} về ngữ pháp hàm, \citet{bresnan1982introduction} về LFG, cho thấy sự quan trọng của cấu trúc đặc trưng thống nhất.
 
-Lĩnh vực \textbf{hiểu ngôn ngữ} cũng bắt đầu trong giai đoạn này, với hệ thống SHRDLU của Terry Winograd, giả lập một con robot trong thế giới của các viên gạch đồ chơi \citep{winograd1972understanding}. Chương trình có thể hiểu được các lệnh bằng ngôn ngữ tự nhiên khá phức tạp (đặt viên gạch màu đỏ lên trên viên gạch nhỏ màu xanh). Hệ thống này còn có khả năng xây dựng một tập ngữ pháp với tiếng Anh, dựa vào hệ thống ngữ pháp của Halliday. Mô hình của Winograd cho thấy vấn đề parsing đã được hiểu đầy đủ để bắt đầu tập trung vào các mô hình về ngữ nghĩa và diễn ngôn. Roger Schank cùng các đồng nghiệp và sinh viên xây dựng các chương trình hiểu ngôn ngữ tập trung vào các tri thức về kịch bản, kế hoạch và mục tập và tổ chức bộ nhớ con người (Schank và Albelson, 1977; Schank và Riesbeck, 1981; Cullingford, 1981; Wilensky, 1983; Lehnert, 1977). Các công trình này sử dụng các mô hình ngữ nghĩa dựa mạng lưới (Quillian, 1968; Norman và Rumelhart, 1975; Schank, 1972; Wilks, 1975c, 1975b; Kínch, 1974) và bắt đầu kết hợp với các lưu ý của Fillmore về case roles \citep{fillmore1968lexical} trong biểu diễn của họ \citep{simmons1972semantic}.
+Lĩnh vực \textbf{hiểu ngôn ngữ} cũng bắt đầu trong giai đoạn này, với hệ thống SHRDLU của Terry Winograd, giả lập một con robot trong thế giới của các viên gạch đồ chơi \citep{winograd1972understanding}. Chương trình có thể hiểu được các lệnh bằng ngôn ngữ tự nhiên khá phức tạp (đặt viên gạch màu đỏ lên trên viên gạch nhỏ màu xanh). Hệ thống này còn có khả năng xây dựng một tập ngữ pháp với tiếng Anh, dựa vào hệ thống ngữ pháp của Halliday. Mô hình của Winograd cho thấy vấn đề parsing đã được hiểu đầy đủ để bắt đầu tập trung vào các mô hình về ngữ nghĩa và diễn ngôn. Roger Schank cùng các đồng nghiệp và sinh viên xây dựng các chương trình hiểu ngôn ngữ tập trung vào các tri thức về kịch bản, kế hoạch và mục tập và tổ chức bộ nhớ con người (Schank và Albelson, \citeyear{schank1977}; Schank và Riesbeck, \citeyear{carbonell1981inside}; Cullingford, \citeyear{riesbeck1981inside}; Wilensky, \citeyear{wilensky1983planning}; Lehnert, \citeyear{lehnert1977conceptual}). Các công trình này sử dụng các mô hình ngữ nghĩa dựa mạng lưới (Quillian, \citeyear{quillianm.r1968}; Norman và Rumelhart, \citeyear{normand.arumerlhartd.e.1975}; Schank, \citeyear{schank1972conceptual}; Wilks, \citeyear{wilks1975preferential}, \citeyear{wilksy1975}; Kintsch, \citeyear{kintsch1974representation}) và bắt đầu kết hợp với các lưu ý của Fillmore về case roles \citep{fillmore1968lexical} trong biểu diễn của họ \citep{simmons1972semantic}.
 
-Các mô hình hướng logic và hiểu ngôn ngữ tự nhiên được kết hợp trong các hệ thống sử dụng logic vị từ như phương pháp biểu diễn ngữ nghĩa, như hệ thống hỏi đáp LUNAR (Woods, 1967, 1973).
+Các mô hình hướng logic và hiểu ngôn ngữ tự nhiên được kết hợp trong các hệ thống sử dụng logic vị từ như phương pháp biểu diễn ngữ nghĩa, như hệ thống hỏi đáp LUNAR (Woods, \citeyear{Woods1967SemanticsFA}, \citeyear{Woods:1973:PNL:1499586.1499695}).
 
-Mô hình \textbf{diễn ngôn} tập trung vào bốn lĩnh vực trong diễn ngôn. Grosz và các cộng sự giới thiệu các nghiên cứu về kết cấu con trong diễn ngôn và tập trung diễn ngôn (Grosz, 1977a; Sidner, 1983), một số nhà nghiên bắt đầu nghiên cứu về tự động phân giải tham chiếu (Hobbs, 1978), và mô hình \textbf{BID} (Belief-Desire-Intention) cho các công trình dựa logic trong xử lý tiếng nói (Perrault và Allen, 1980; Cohen và Perrault, 1979).
+Mô hình \textbf{diễn ngôn} tập trung vào bốn lĩnh vực trong diễn ngôn. Grosz và các cộng sự giới thiệu các nghiên cứu về kết cấu con trong diễn ngôn và tập trung diễn ngôn (Grosz, \citeyear{grosz1977representation}; Sidner, \citeyear{10000030796}), một số nhà nghiên bắt đầu nghiên cứu về tự động phân giải tham chiếu (Hobbs, \citeyear{hobbs-resolving-1987}), và mô hình \textbf{BID} (Belief-Desire-Intention) cho các công trình dựa logic trong xử lý tiếng nói (Perrault và Allen, \citeyear{perrault1980plan}; Cohen và Perrault, \citeyear{COHEN1979177}).
 
 \subsection{Chủ nghĩa kinh nghiệm và mô hình hữu hạn trạng thái Redux: 1983-1993}
 
-Thập kỷ tiếp theo chứng kiến hai lớp mô hình đã không còn phổ biến từ cuối những năm 1950 hoặc đầu những năm 1960, đặc biệt là do các lập luận lý thuyết chống lại chúng như những đánh giá của Chomsky về Skinner's Verbal Behavior (Chomsky, 1959b). Mô hình đầu tiên là các mô hình hữu hạn trạng thái, bắt đầu nhận được sự chú ý trở lại từ các công trình về âm vị học và ngôn ngữ hình thái học hữu hạn trạng thái của Kaplan và Kay (1981) và các mô hình hữu hạn trạng thái của Church (1980). Quyển sách này sẽ dành một thời lượng lớn cho các mô hình hữu hạn trạng thái sẽ được trình bày ở các chương sau.
+Thập kỷ tiếp theo chứng kiến hai lớp mô hình đã không còn phổ biến từ cuối những năm 1950 hoặc đầu những năm 1960, đặc biệt là do các lập luận lý thuyết chống lại chúng như những đánh giá của Chomsky về Skinner's Verbal Behavior (Chomsky, \citeyear{cogprints1148}). Mô hình đầu tiên là các mô hình hữu hạn trạng thái, bắt đầu nhận được sự chú ý trở lại từ các công trình về âm vị học và ngôn ngữ hình thái học hữu hạn trạng thái của \citet{kaplan1981phonological} và các mô hình hữu hạn trạng thái của \citet{church1980memory}. Quyển sách này sẽ dành một thời lượng lớn cho các mô hình hữu hạn trạng thái sẽ được trình bày ở các chương sau.
 
 Xu hướng thứ hai trong giai đoạn này là cái mà được gọi là "sự quay lại của chủ nghĩa kinh nghiệm", với điểm nhấn đáng chú ý nhất là sự phát triển của các mô hình xác suất trong xử lý ngôn ngữ và tiếng nói, ảnh hưởng mạnh mẽ bởi các công trình tại IBM Thomas J. Watson Research Center với các mô hình xác suất trong bài toán nhận dạng tiếng nói. Các phương pháp dựa xác suất và các cách tiếp cận hướng dữ liệu lan tỏa từ tiếng nói đến các bài toán gán nhãn từ loại, parsing và ngữ nghĩa. Hướng đi thực dụng này cũng đi cùng bởi một hướng tiếp cận mới trong đánh giá mô hình, dựa vào việc lựa chọn dữ liệu, phát triển các độ đo định tính cho việc đánh giá, và việc chú ý so sánh chất lượng qua các độ đo so với các báo cáo đã xuất bản trước đó.
 
@@ -265,7 +265,7 @@ Năm năm cuối của thiên niên trải qua sự thay đổi to lớn trong l
 
 \subsection{Sự phát triển của học máy: 2000-2007}
 
-Xu hướng theo chủ nghĩa kinh nghiệm bắt đầu vào cuối những năm 1990 đã bắt đầu tăng tốc với tốc độ đáng kinh ngạc trong thế kỷ mới. Sự tăng tốc này xuất phát từ ba xu hướng. Đầu tiên, một lượng lớn các dữ liệu tiếng nói và văn bản ra đời với sự hỗ trợ của Linguistic Data Consortium (LDA) và các tổ chức tương tự. Trong các tài nguyên này có các tập dữ liệu được gán nhãn như Penn Treebank (Marcus et al., 1993), Prague Dependency Treebank (Hajic, 1998), PropBank (Palmer et al., 2005), Penn Discourse Treebank (Miltsakaki et al., 2004b), RSTBank (Carlson et al., 2001) và TimeBank (Pustejovsky et al., 2003b), tất cả các nguồn dữ liệu này đã hình thành các tầng ngữ liệu tiêu chuẩn cho các bài toán ngữ pháp, ngữ nghĩa và ngữ dụng. Sự xuất hiện của các tài nguyên này thúc đẩy xu hướng chuyển các bài toán phức tạp truyền thống, như parsing hay phân tích cảm xúc, trở thành các bài toán học máy có giám sát. Các nguồn tài nguyên này cũng thúc đẩy việc ra đời của các cuộc thi đánh giá cho các bài toán parsing (Dejean và Tjong Kim Sang, 2001), trích rút thông tin (NIST, 2007a; Sang, 2002; Sang và De Meulder, 2003), khử nhập nhằng nghĩa từ (Palmer et al., 2001a; Kilgarriff và Palmer, 2000), hỏi đáp (Voorhees và Tice, 1999), và tóm tắt văn bản (Dang 2006).
+Xu hướng theo chủ nghĩa kinh nghiệm bắt đầu vào cuối những năm 1990 đã bắt đầu tăng tốc với tốc độ đáng kinh ngạc trong thế kỷ mới. Sự tăng tốc này xuất phát từ ba xu hướng. Đầu tiên, một lượng lớn các dữ liệu tiếng nói và văn bản ra đời với sự hỗ trợ của Linguistic Data Consortium (LDA) và các tổ chức tương tự. Trong các tài nguyên này có các tập dữ liệu được gán nhãn như Penn Treebank \citep{marcus1993building}, Prague Dependency Treebank \citep{hajic:1998}, PropBank \citep{palmer2005proposition}, Penn Discourse Treebank \citep{miltsakaki2004penn}, RSTBank \citep{carlson2001discourse} và TimeBank \citep{pustejovsky2003timebank}, tất cả các nguồn dữ liệu này đã hình thành các tầng ngữ liệu tiêu chuẩn cho các bài toán ngữ pháp, ngữ nghĩa và ngữ dụng. Sự xuất hiện của các tài nguyên này thúc đẩy xu hướng chuyển các bài toán phức tạp truyền thống, như parsing hay phân tích cảm xúc, trở thành các bài toán học máy có giám sát. Các nguồn tài nguyên này cũng thúc đẩy việc ra đời của các cuộc thi đánh giá cho các bài toán parsing \citep{sang2001introduction}, trích rút thông tin (NIST, \citeyear{nist2007}; Sang, \citeyear{TjongKimSang:2002:ICS:1118853.1118877}; Sang và De Meulder, \citeyear{tjong2003introduction}), khử nhập nhằng nghĩa từ (Palmer et al., \citeyear{Palmer:2001:ETA:2387364.2387369}; Kilgarriff và Palmer, 2000), hỏi đáp (Voorhees và Tice, 1999), và tóm tắt văn bản (Dang 2006).
 
 Thứ hai, việc tập trung hơn vào quá trình học dẫn đến sự tương tác sâu hơn với cộng đồng học máy thống kê. Các kỹ thuật như support vector machines (Boser et al., 1992; Vapnik, 1995), maximum entropy và các thuật toán tương tự như multinomial logistic regression (Berger et al., 1996), graphical Bayesian models (Pearl, 1988) trở thành tiêu chuẩn trong cộng đồng ngôn ngữ học tính toán. Thứ ba, việc phát triển rộng khắp của các hệ thống máy tính hiệu năng cao giúp cải tiến quá trình huấn luyện và triển khai mà không thể xuất hiện ở thập kỷ trước.
 
@@ -309,4 +309,4 @@ Các tạp chí gồm có \textit{Conputational Linguistics}, \textit{Natural La
 
 Các công trình trong xử lý ngôn ngữ từ quan điểm trí tuệ nhân tạo có thể tìm thấy trong các hội nghị thường niên như American Association for Artificial Intelligence (AAAI), International Joint Conference on Artifical Intelligence (IJCAI). Các tập chí thường xuyên có các bài nghiên cứu về lĩnh vực xử lý ngôn ngữ và tiếng nói gồm có Machine Learning, Journal of Machine Learning Research, và Journal of Artificial Intelligence Research.
 
-Có rất nhiều quyển sách giáo khoa đề cập đến nhiều khía cạnh của xử lý ngôn ngữ và tiếng nói. Manning và Schutze (1999) (\textit{Foundations of Statistical Language Processing}) tập trung vào các mô hình thống kê trong các bài toán tagging, parsing, khử nhập nhằng, đồng tham chiếu và các bài toán khác. Charniak (1993) (\textit{Statistical Language Learning}) là một nguồn có thể truy cập, đề cập đến các vấn đề cũ hơn và nhẹ nhàng hơn. Manning et al. (2008) tập trung vào bài toán truy hồi thông tin, phân loại văn bản và phân cụm. NLTK, the Natural Language Toolkit (Bird và Loper, 2004), là một tập hợp các module và dữ liệu cho việc xử lý ngôn ngữ, với quyển sách Natural Language Processing dựa trên NLTK. Allen (1995) (Natural Language Understanding) đề cập đến các chủ đề sâu về xử lý ngôn ngữ từ quan điểm AI. Gazdar vaf Mellish (1989) (\textit{Natural Language Processing in Lisp/Prolog}) đề cập đến automata, parsing, các đặc trưng và unification và có sẵn trên mạng. Pereira và Shieber (1987) giới thiệu các chương trình parsing và dịch dựa vào Prolog. Russell và Norvig (2002) là một quyển sách giới thiệu về trí tuệ nhân tạo trong đó có các chương giới thiệu về xử lý ngôn ngữ. Partee et al. (1990) có một phần lớn đề cập đến các kiến thức toán cho ngôn ngữ học tính toán. Một tập hợp danh sách các báo cáo khoa học đáng chú ý có thể tìm được Grosz et al. (1986) (\textit{Readings in Natural Language Processing}).
+Có rất nhiều quyển sách giáo khoa đề cập đến nhiều khía cạnh của xử lý ngôn ngữ và tiếng nói. \citet{manning1999foundations} (\textit{Foundations of Statistical Language Processing}) tập trung vào các mô hình thống kê trong các bài toán tagging, parsing, khử nhập nhằng, đồng tham chiếu và các bài toán khác. Charniak (1993) (\textit{Statistical Language Learning}) là một nguồn có thể truy cập, đề cập đến các vấn đề cũ hơn và nhẹ nhàng hơn. Manning et al. (2008) tập trung vào bài toán truy hồi thông tin, phân loại văn bản và phân cụm. NLTK, the Natural Language Toolkit (Bird và Loper, 2004), là một tập hợp các module và dữ liệu cho việc xử lý ngôn ngữ, với quyển sách Natural Language Processing dựa trên NLTK. Allen (1995) (Natural Language Understanding) đề cập đến các chủ đề sâu về xử lý ngôn ngữ từ quan điểm AI. Gazdar vaf Mellish (1989) (\textit{Natural Language Processing in Lisp/Prolog}) đề cập đến automata, parsing, các đặc trưng và unification và có sẵn trên mạng. Pereira và Shieber (1987) giới thiệu các chương trình parsing và dịch dựa vào Prolog. Russell và Norvig (2002) là một quyển sách giới thiệu về trí tuệ nhân tạo trong đó có các chương giới thiệu về xử lý ngôn ngữ. Partee et al. (1990) có một phần lớn đề cập đến các kiến thức toán cho ngôn ngữ học tính toán. Một tập hợp danh sách các báo cáo khoa học đáng chú ý có thể tìm được Grosz et al. (1986) (\textit{Readings in Natural Language Processing}).
