--- a/tex/1.bib
+++ b/tex/1.bib
@@ -3,7 +3,7 @@
   author={Manning, Christopher D. and Raghavan, Prabhakar and Schütze, Hinrich},
   journal={Cambridge University Press, New York, NY, USA},
   volume={3},
-  pages={38--48}
+  year={2008},
 }
 
 @UNPUBLISHED {nist2007,
