--- a/tex/1.bib
+++ b/tex/1.bib
@@ -129,6 +129,14 @@
   publisher={MIT press}
 }
 
+@article{kay1999grammatical,
+  title={Grammatical constructions and linguistic generalizations: the What's X doing Y? construction},
+  author={Kay},
+  journal={Language},
+  pages={1--33},
+  publisher={JSTOR}
+}
+
 @incollection{hajic:1998,
     author = {Haji\v{c}, Jan},
     booktitle = {{Issues of Valency and Meaning. Studies in Honor of Jarmila Panevov\'{a}}},
@@ -150,6 +158,15 @@
   author={Reeves, Byron and Nass, Clifford Ivar},
   year={1996},
   publisher={Cambridge university press}
+}
+
+@inproceedings{colmerauer1996birth,
+  title={The birth of Prolog},
+  author={Colmerauer, Alain and Roussel, Philippe},
+  booktitle={History of programming languages---II},
+  pages={331--367},
+  year={1996},
+  organization={ACM}
 }
 
 @book{charniak1996statistical,
@@ -184,6 +201,14 @@
   publisher={MIT Press}
 }
 
+@inproceedings{baker1990stochastic,
+  title={Stochastic modeling for automatic speech understanding},
+  author={Baker, James K},
+  booktitle={Readings in speech recognition},
+  pages={297--307},
+  organization={Morgan Kaufmann Publishers Inc.}
+}
+
 @inproceedings{partee1990domains,
   title={Domains of Quantifications and Semantic Typology},
   author={Partee, Barbara H},
@@ -213,6 +238,31 @@
   author={Grosz, Barbara J and Jones, Karen Sparck and Webber, Bonnie Lynn},
   year={1986},
   publisher={Kaufman Publishers Inc., Los Altos, CA}
+
+@inproceedings{bahl1986maximum,
+  title={Maximum mutual information estimation of hidden Markov model parameters for speech recognition},
+  author={Bahl and Mercer},
+  booktitle={Acoustics, Speech, and Signal Processing, IEEE International Conference on ICASSP'86.},
+  volume={11},
+  pages={49--52},
+  organization={IEEE}
+}
+
+@incollection{shieber1985evidence,
+  title={Evidence against the context-freeness of natural language},
+  author={Shieber},
+  booktitle={Philosophy, Language, and Artificial Intelligence},
+  pages={79--89},
+  publisher={Springer}
+}
+
+@article{huybregts1984weak,
+  title={The weak inadequacy of context-free phrase structure grammars},
+  author={Huybregts},
+  journal={Van periferie naar kern},
+  pages={81--99},
+  publisher={Foris Dordrecht}
+}
 
 @article{10000030796,
 author="SIDNER, C.",
@@ -451,6 +501,46 @@ author = "Philip R. Cohen and C. Raymond Perrault"
  address = {New York, NY, USA},
 }
 
+@article{wagner1974string,
+  title={The string-to-string correction problem},
+  author={Wagner, Robert A and Fischer, Michael J},
+  journal={Journal of the ACM (JACM)},
+  volume={21},
+  number={1},
+  pages={168--173},
+  publisher={ACM}
+}
+
+@article{reichert1973application,
+  title={An application of information theory to genetic mutations and the matching of polypeptide sequences},
+  author={Reichert, Thomas A and Cohen, Donald N and Wong, Andrew KC},
+  journal={Journal of Theoretical Biology},
+  volume={42},
+  number={2},
+  pages={245--261},
+  publisher={Elsevier}
+}
+
+@article{sankoff1972matching,
+  title={Matching sequences under deletion/insertion constraints},
+  author={Sankoff},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={69},
+  number={1},
+  pages={4--6},
+  publisher={National Acad Sciences}
+}
+
+@article{jelinek1976continuous,
+  title={Continuous speech recognition by statistical methods},
+  author={Jelinek},
+  journal={Proceedings of the IEEE},
+  volume={64},
+  number={4},
+  pages={532--556}
+  publisher={IEEE}
+}
+
 @article{schank1972conceptual,
   title={Conceptual dependency: A theory of natural language understanding},
   author={Schank, Roger C},
@@ -480,6 +570,22 @@ author = "Philip R. Cohen and C. Raymond Perrault"
   publisher={Department of Computer Sciences and Computer-Assisted Instruction Laboratory, University of Texas}
 }
 
+@inproceedings{sakoe1971dynamic,
+  title={Dynamic-programming approach to continuous speech recognition},
+  author={Sakoe and Chiba},
+  booktitle={1971 Proc. the International Congress of Acoustics, Budapest}
+}
+
+@article{needleman1970general,
+  title={A general method applicable to the search for similarities in the amino acid sequence of two proteins},
+  author={Needleman and Wunsch},
+  journal={Journal of molecular biology},
+  volume={48},
+  number={3},
+  pages={443--453},
+  publisher={Elsevier}
+}
+
 @misc{colmerauer1970systemes,
   title={Les systemes-q ou un formalisme pour analyser et synth{\'e}tiser des phrases sur ordinateur. d{\'e}partement d’informatique de l’Universit{\'e} de Montr{\'e}al, publication interne, 43},
   author={Colmerauer, A},
@@ -504,6 +610,26 @@ author = "Philip R. Cohen and C. Raymond Perrault"
   pages={373--393},
   year={1968},
   publisher={JSTOR}
+}
+
+@article{vintsyuk1968speech,
+  title={Speech discrimination by dynamic programming},
+  author={Vintsyuk},
+  journal={Cybernetics},
+  volume={4},
+  number={1},
+  pages={52--57},
+  publisher={Springer}
+}
+
+@article{viterbi1967error,
+  title={Error bounds for convolutional codes and an asymptotically optimum decoding algorithm},
+  author={Viterbi},
+  journal={IEEE transactions on Information Theory},
+  volume={13},
+  number={2},
+  pages={260--269},
+  publisher={IEEE}
 }
 
 @inproceedings{Woods1967SemanticsFA,
@@ -546,12 +672,30 @@ author = "Philip R. Cohen and C. Raymond Perrault"
   publisher={Addison-Wesley}
 }
 
+@article{chomsky1963formal,
+  title={Formal properties of grammars},
+  author={Chomsky},
+  journal={Handbook of Math. Psychology},
+  volume={2},
+  pages={328--418}
+}
+
 @book{harris1962string,
   title={String analysis of sentence structure},
   author={Harris, Zellig Sabbettai},
   number={1},
   year={1962},
   publisher={Mouton}
+}
+
+@article{merton1961social,
+  title={Social problems and sociological theory},
+  author={Robert K. Merton},
+  journal={Contemporary social problems},
+  volume={3},
+  pages={793--845},
+  year={1961},
+  publisher={Harcourt Brace \& World New York}
 }
 
 @article{Backus1960ReportOT,
@@ -576,6 +720,11 @@ author = "Philip R. Cohen and C. Raymond Perrault"
              url = {http://cogprints.org/1148/}
 }
 
+@article{backus1959syntax,
+  title={The syntax and semantics of the proposed international algebraic language of the Zurich ACM-GAMM conference},
+  author={Backus and Naur},
+  journal={Proceedings of the International Comference on Information Processing, 1959}
+}
 
 @inproceedings{bledsoe1959pattern,
   title={Pattern recognition and reading by machine},
@@ -675,4 +824,15 @@ author = "Philip R. Cohen and C. Raymond Perrault"
   pages={115--133},
   year={1943},
   publisher={Springer}
+}
+
+@article{ogburn1922inventions,
+  title={Are inventions inevitable? A note on social evolution},
+  author={Ogburn and Thomas},
+  journal={Political Science Quarterly},
+  volume={37},
+  number={1},
+  pages={83--98},
+  year={1922},
+  publisher={JSTOR}
 }
